[package]
name = "holy-diver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#swim_rs = {git = "https://github.com/mhallin/swim-rs.git", rev = "8d7f3d8" }
foca = { version = "0.11.0", features = ["std", "tracing", "postcard-codec"] }
clap = "4.1.13"
rand = { version = "0.8.5", features = ["small_rng"] }
bytes = { version = "1.4.0" }
tracing-subscriber = "0.3.16"
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.26.0", default-features = false, features = ["rt", "macros", "sync", "time", "net"] }
anyhow = "1.0.70"
fmt = "0.1.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }

serde = { version = "1.0.158", features = ["derive"] }
bincode = { version = "1.3.3", default-features = false }
postcard = { version = "1.0.4", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }

#crdts = "7.3.0"
automerge = "0.3.0"
